<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/_1"
        android:title="@string/sh_1" />

    <item android:id="@+id/_2"

        android:title="@string/sh_2"

       />
    <item android:id="@+id/_3"
        android:title="@string/sh_3" />

    <item android:id="@+id/_4"
        android:title="@string/sh_4" />
    <item android:id="@+id/_5"
    android:title="@string/sh_5" />
    <item android:id="@+id/_6"
    android:title="@string/sh_6" />
    <item android:id="@+id/_7"
    android:title="@string/sh_7" />
    <item android:id="@+id/_8"
        android:title="@string/sh_8" />
    <item android:id="@+id/_9"
        android:title="@string/sh_9" />
    <item android:id="@+id/_10"
        android:title="@string/sh_10" />
    <item android:id="@+id/_11"
        android:title="@string/sh_11" />
    <item android:id="@+id/_12"
        android:title="@string/sh_12" />
    <item android:id="@+id/_13"
        android:title="@string/sh_13" />
    <item android:id="@+id/_14"
        android:title="@string/sh_14" />
    <item android:id="@+id/_15"
        android:title="@string/sh_15" />
    <item android:id="@+id/_16"
    android:title="@string/sh_16" />
    <item android:id="@+id/_17"
    android:title="@string/sh_17" />
    <item android:id="@+id/_18"
    android:title="@string/sh_18" />
    <item android:id="@+id/_19"
    android:title="@string/sh_19" />
    <item android:id="@+id/_20"
        android:title="@string/sh_20" />


</menu>